src/codegen/snapshots/tests__tac_complex_op.snap
---
source: src/codegen/tac.rs
expression: tac
---
t2 := 1
t3 := 2
t4 := t2 + t3
t5 := 3
t6 := 4
t7 := t5 * t6
t8 := t4 + t7
t9 := 5
t10 := t8 + t9
t11 := 6
t12 := 9
t13 := t11 / t12
t14 := t10 < t13
o0 := t14

