src/codegen/snapshots/tests__tac_func_def.snap
---
source: src/codegen/tac.rs
expression: tac
---
program mult
BeginFunc f0
Pop o2
Pop o1
t2 := o1 * o2
Return t2
EndFunc
begin mult
t2 := 6
t3 := 9
Push t2
Push t3
t4 := Call f0
o3 := t4
end mult

