src/codegen/snapshots/tests__tac_if.snap
---
source: src/codegen/tac.rs
expression: tac
---
program mult
begin mult
o0 : i32
t2 := 1
o0 := t2
t3 := 1
jmp L1 !t3
t4 := 2
o0 := t4
L1
end mult

