src/codegen/snapshots/tests__tac_simple.snap
---
source: src/codegen/tac.rs
expression: tac
---
program x
begin x
o0 : i32
t2 := 0
o0 := t2
end x

